<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:id="@+id/nav_home"
        android:title="@string/menu_drawer_home"
        android:icon="@drawable/ic_menu_home"/>

    <item android:id="@+id/nav_activities"
        android:title="@string/menu_drawer_atividades"
        android:icon="@drawable/ic_menu_category"/>

    <item android:id="@+id/nav_stats"
        android:title="@string/menu_drawer_stats"
        android:icon="@drawable/ic_menu_stats"/>

    <item android:id="@+id/nav_ranking"
        android:title="@string/menu_drawer_ranking"
        android:icon="@drawable/ic_menu_ranking"/>

    <item android:id="@+id/nav_account"
        android:title="@string/menu_drawer_minha_conta"
        android:icon="@drawable/ic_menu_user"/>

    <item android:id="@+id/nav_settings"
        android:title="@string/menu_drawer_settings"
        android:icon="@drawable/ic_menu_settings" />

    <item android:id="@+id/nav_logout"
        android:title="@string/menu_drawer_sair"
        android:icon="@drawable/ic_menu_logout"/>

</menu>