<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.edu.ifsp.arq.dmos5.ifitness.UsuarioPerfilActivity"
    android:orientation="vertical"
    android:gravity="center">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include layout="@layout/menu_toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"/>
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:id="@+id/iv_perfil_imagem"
                android:src="@drawable/profile_image"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/txt_layout_perfil_nome"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_marginTop="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:hint="@string/usuario_cadastro_nome">
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/txt_edit_perfil_nome"
                        android:inputType="textCapWords|textPersonName"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/txt_layout_perfil_telefone"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_marginTop="8dp"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="8dp"
                    android:hint="Telefone">
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/txt_edit_perfil_telefone"
                        android:inputType="textCapWords"/>
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/txt_layout_perfil_email"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginLeft="8dp"
                    android:hint="@string/usuario_cadastro_email">
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/txt_edit_perfil_email"
                        android:inputType="textEmailAddress"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:id="@+id/txt_layout_perfil_peso"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="4dp"
                    android:layout_marginLeft="8dp"
                    android:hint="@string/usuario_cadastro_peso">
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/txt_edit_perfil_peso"
                        android:inputType="numberDecimal"/>
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <!--DATA DE NASCIMENTO e GENERO -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txt_layout_perfil_data_nascimento"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_weight="1"
                    android:hint="Data de Nascimento">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txt_edit_perfil_data_nascimento"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="false"
                        android:inputType="none"
                        android:textColor="@android:color/black" />

                </com.google.android.material.textfield.TextInputLayout>

                <ImageButton
                    android:id="@+id/btn_calendario"
                    android:layout_width="35dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="22dp"
                    android:src="@drawable/ic_calendar"
                    android:background="#C8FAF4"
                    style="@style/Widget.AppCompat.Button.Colored"/>

                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:layout_marginTop="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="4dp"
                    android:id="@+id/sp_generos"
                    android:entries="@array/generos"
                    style="@style/Widget.AppCompat.Spinner.DropDown" />
            </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btn_usuario_atualizar"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="20dp"
                android:text="@string/usuario_perfil_atualizar"
                style="@style/Widget.MaterialComponents.Button.UnelevatedButton" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>